sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart = getNombreValeurs()
  if (ecart > 1) {
    ecart = ecart / 1,3
  }
  i = 0
  while (i+ecart < getNombreValeurs()) {
    if (!plusPetit(i,i+ecart)) {
      echanger(i,i+ecart)
      i += 1
    }
  }
}